--- a/authors.html
+++ b/authors.html
@@ -54,9 +54,6 @@ Log            </a>
                         <li >
                             <a href="/category/posts.html">Posts</a>
                         </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
-                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -70,21 +67,17 @@ Log            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Log</h1>
-        <li><a href="/author/freeeebie.html">freeeebie</a> (8)</li>
-        <li><a href="/author/me.html">me</a> (2)</li>
+        <li><a href="/author/freeeebie.html">freeeebie</a> (6)</li>
+        <li><a href="/author/me.html">me</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -107,6 +100,7 @@ Log            </a>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
