--- a/bst-node-count.html
+++ b/bst-node-count.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="algorithm" />
-        <meta name="description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 ..." />
+        <meta name="description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 …" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;BST node count&#34;"/>
         <meta property="og:url" content="/bst-node-count.html"/>
-        <meta property="og:description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 ..."/>
+        <meta property="og:description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 …"/>
         <meta property="article:published_time" content="2016-10-02" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="algorithm" />
@@ -59,9 +59,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -146,10 +143,10 @@ Log            </a>
 </pre></div>
 
 
-<p>전체 코드<br />
+<p>전체 코드<br>
 https://github.com/freeeebie/algorithm-study/blob/master/tree/count_less_greater_nodes.py</p>
-<hr />
-<p>reference<br />
+<hr>
+<p>reference<br>
 https://www.careercup.com/question?id=5165570324430848</p>
             </div>
             <!-- /.entry-content -->
@@ -159,16 +156,12 @@ https://www.careercup.com/question?id=5165570324430848</p>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -191,6 +184,7 @@ https://www.careercup.com/question?id=5165570324430848</p>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
