--- a/hwagryul.html
+++ b/hwagryul.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Math"" />
-        <meta name="description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 ..." />
+        <meta name="description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;확률&#34;"/>
         <meta property="og:url" content="/hwagryul.html"/>
-        <meta property="og:description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 ..."/>
+        <meta property="og:description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-17" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content=""Math"" />
@@ -59,9 +59,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -108,28 +105,28 @@ Log            </a>
 <h2>Random Variable(확률변수)</h2>
 <p>정의  </p>
 <div class="math">$$ X:\Omega\Rightarrow R $$</div>
-<p><br />
+<p><br>
 X: 함수</p>
-<p>이산확률변수<br />
+<p>이산확률변수<br>
 <span class="math">\(P(X=k)= P(\{w:X(w)=k\})\)</span></p>
 <h2>Joint probability(결합확률)</h2>
 <ul>
-<li>확률질량함수<br />
+<li>확률질량함수<br>
 이산데이터에 대하여 누적 확률  </li>
-<li>누적분포함수 (CDF)<br />
+<li>누적분포함수 (CDF)<br>
     확률값을 적분한 것. 1에 수렴 </li>
-<li>확률밀도함수<br />
+<li>확률밀도함수<br>
 누적분포를 미분한 것 </li>
 </ul>
 <h2>Maginary probability(주변확률)</h2>
-<p>두 변수중 한가지 확률변수 계산<br />
+<p>두 변수중 한가지 확률변수 계산<br>
 왜  maginary 인가?? table 로 표현하면 주분에 위치하므로, </p>
 <h2>Conditional PMF (조건부 확률)</h2>
 <div class="math">$$P_{Y|X} (y|x) =   $$</div>
 <div class="math">$${P_{XY}(x,y)} \over {P_X(x)} $$</div>
 <p>random variable X의 값이 x라고 알려져 있을 때, Y가 y일 확률</p>
 <h3>Product rule</h3>
-<p>conditional PMF 의 정의로 구함<br />
+<p>conditional PMF 의 정의로 구함<br>
 </p>
 <div class="math">$$P_{Y|X} (y|x) = P(y|x)P(x) = P(x|y)P(y)$$</div>
 <h2>대표적 연속 확률 분포</h2>
@@ -138,7 +135,7 @@ X: 함수</p>
 <li>가우스 분포 </li>
 <li>$ X \thicksim N(\mu, \sigma^2) $</li>
 <li>
-<p>PDF<br />
+<p>PDF<br>
 <div class="math">$$ f_X(x) = \frac {1}{\sqrt{2\pi\sigma^2}}exp[-\frac{(x-\mu)^2}{2\sigma^2}]  $$</div>
 </p>
 </li>
@@ -151,7 +148,7 @@ X: 함수</p>
 <h3>베르누이 분포</h3>
 <ul>
 <li>
-<p>PMF<br />
+<p>PMF<br>
 <div class="math">$$ P_X(x) = 
 \left\{ \begin{array}{rcl}
          p &amp; \mbox{if}
@@ -170,7 +167,7 @@ $$</div>
 <li>Binomial Distribution </li>
 <li>$ X \thicksim Binom(n,p) $</li>
 <li>
-<p>PMF<br />
+<p>PMF<br>
 <div class="math">$$ P_X(X) = 
 \left( \begin{array}{c} n \\ x \end{array} \right) p^x(1-p)^{n-x}
 $$</div>
@@ -182,11 +179,11 @@ $$</div>
 <li><span class="math">\(Var[x] = \Sigma Var[X_i] = np(1-p)\)</span></li>
 </ul>
 <script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
-    var align = "center",
-        indent = "0em",
+    var align = "left",
+        indent = "2em",
         linebreak = "false";
 
-    if (false) {
+    if (true) {
         align = (screen.width < 768) ? "left" : align;
         indent = (screen.width < 768) ? "0em" : indent;
         linebreak = (screen.width < 768) ? 'true' : linebreak;
@@ -201,7 +198,7 @@ $$</div>
     mathjaxscript[(window.opera ? "innerHTML" : "text")] =
         "MathJax.Hub.Config({" +
         "    config: ['MMLorHTML.js']," +
-        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
+        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' }, Macros: {} }," +
         "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
         "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
         "    displayAlign: '"+ align +"'," +
@@ -246,16 +243,12 @@ $$</div>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -278,6 +271,7 @@ $$</div>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
