--- a/keyboard-shortcuts-for-bash.html
+++ b/keyboard-shortcuts-for-bash.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="info" />
-        <meta name="description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command ..." />
+        <meta name="description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command …" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;Keyboard Shortcuts for Bash&#34;"/>
         <meta property="og:url" content="/keyboard-shortcuts-for-bash.html"/>
-        <meta property="og:description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command ..."/>
+        <meta property="og:description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command …"/>
         <meta property="article:published_time" content="2016-10-02" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="info" />
@@ -59,9 +59,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -106,23 +103,23 @@ Log            </a>
                 </div>
                 <h1>Bash shell 단축키</h1>
 <p>http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함  </p>
-<p>Ctrl + A    Go to the beginning of the line you are currently typing on<br />
-Ctrl + E    Go to the end of the line you are currently typing on<br />
-Ctrl + L                Clears the Screen, similar to the clear command<br />
-Ctrl + U    Clears the line before the cursor position. If you are at the end of the line, clears the entire line.<br />
-Ctrl + H    Same as backspace<br />
-Ctrl + R    Let’s you search through previously used commands<br />
-Ctrl + C    Kill whatever you are running<br />
-Ctrl + D    Exit the current shell<br />
-Ctrl + Z    Puts whatever you are running into a suspended   background process. fg restores it.<br />
-Ctrl + W    Delete the word before the cursor<br />
-Ctrl + K    Clear the line after the cursor<br />
-Ctrl + T    Swap the last two characters before the cursor<br />
-Esc + T Swap the last two words before the cursor<br />
-Alt + F Move cursor forward one word on the current line<br />
-Alt + B Move cursor backward one word on the current line<br />
+<p>Ctrl + A    Go to the beginning of the line you are currently typing on<br>
+Ctrl + E    Go to the end of the line you are currently typing on<br>
+Ctrl + L                Clears the Screen, similar to the clear command<br>
+Ctrl + U    Clears the line before the cursor position. If you are at the end of the line, clears the entire line.<br>
+Ctrl + H    Same as backspace<br>
+Ctrl + R    Let’s you search through previously used commands<br>
+Ctrl + C    Kill whatever you are running<br>
+Ctrl + D    Exit the current shell<br>
+Ctrl + Z    Puts whatever you are running into a suspended   background process. fg restores it.<br>
+Ctrl + W    Delete the word before the cursor<br>
+Ctrl + K    Clear the line after the cursor<br>
+Ctrl + T    Swap the last two characters before the cursor<br>
+Esc + T Swap the last two words before the cursor<br>
+Alt + F Move cursor forward one word on the current line<br>
+Alt + B Move cursor backward one word on the current line<br>
 Tab Auto-complete files and folder names  </p>
-<hr />
+<hr>
             </div>
             <!-- /.entry-content -->
         </article>
@@ -131,16 +128,12 @@ Tab Auto-complete files and folder names  </p>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -163,6 +156,7 @@ Tab Auto-complete files and folder names  </p>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
