--- a/linear-regression.html
+++ b/linear-regression.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="'Machine&nbsp,Learning'" />
-        <meta name="description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 ..." />
+        <meta name="description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;Linear Regression&#34;"/>
         <meta property="og:url" content="/linear-regression.html"/>
-        <meta property="og:description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 ..."/>
+        <meta property="og:description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-10-01" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="'Machine&nbsp" />
@@ -60,9 +60,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -109,14 +106,14 @@ Log            </a>
                 </div>
                 <h1>다항식 회귀</h1>
 <div class="math">$$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$</div>
-<p><br />
+<p><br>
 $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다.  </p>
 <h1>Model Selection</h1>
 <p>정확도를 어떻게 측정. 최대로 잘 맞는지  </p>
 <h1>overfitting</h1>
 <p>모델에 비해 data 가 너무 적어 noise 까지 fitting 해버리는 현상  </p>
 <h1>알고리즘 정확도 측정</h1>
-<p>학습에 동원되지 않은 데이터로 에러 측정<br />
+<p>학습에 동원되지 않은 데이터로 에러 측정<br>
 K-folder Cross Validation (CV)  </p>
 <h2>항상 지켜야 될 원칙</h2>
 <p>훈련에 쓰지 않는 데이터로 에러 측정 </p>
@@ -124,15 +121,15 @@ K-folder Cross Validation (CV)  </p>
 <p>각 데이터가 10개의 속성이 있을 때 $10^{10} \:?? $</p>
 <h1>Feature mapping</h1>
 <div class="math">$$ \overrightarrow{z} = \phi(\overrightarrow{x}) $$</div>
-<p><br />
+<p><br>
 </p>
 <div class="math">$$ \frac{1}{wt} = \phi(wt) \Rightarrow mpg = w_0 + w_1 \frac{1}{wt}$$</div>
 <script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
-    var align = "center",
-        indent = "0em",
+    var align = "left",
+        indent = "2em",
         linebreak = "false";
 
-    if (false) {
+    if (true) {
         align = (screen.width < 768) ? "left" : align;
         indent = (screen.width < 768) ? "0em" : indent;
         linebreak = (screen.width < 768) ? 'true' : linebreak;
@@ -147,7 +144,7 @@ K-folder Cross Validation (CV)  </p>
     mathjaxscript[(window.opera ? "innerHTML" : "text")] =
         "MathJax.Hub.Config({" +
         "    config: ['MMLorHTML.js']," +
-        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
+        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' }, Macros: {} }," +
         "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
         "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
         "    displayAlign: '"+ align +"'," +
@@ -192,16 +189,12 @@ K-folder Cross Validation (CV)  </p>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -224,6 +217,7 @@ K-folder Cross Validation (CV)  </p>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
