--- a/mfcc.html
+++ b/mfcc.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Machine&nbsp,Learning"" />
-        <meta name="description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT ..." />
+        <meta name="description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT …" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;MFCC&#34;"/>
         <meta property="og:url" content="/mfcc.html"/>
-        <meta property="og:description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT ..."/>
+        <meta property="og:description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT …"/>
         <meta property="article:published_time" content="2016-09-11" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content=""Machine&nbsp" />
@@ -60,9 +60,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -107,25 +104,25 @@ Log            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>음성 데이터의 특징 추출<br />
-성대의 떨림은 고유함.성도를 system H 라고 가정하여<br />
+                <p>음성 데이터의 특징 추출<br>
+성대의 떨림은 고유함.성도를 system H 라고 가정하여<br>
 이 시스템 H의 특징을 찾음.  </p>
-<p>1 step<br />
-시그널을 일정 frame 단위로 나눔.<br />
-windowing 실행<br />
-2 step<br />
-해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함.<br />
-3 step<br />
-mel filter bank 적용<br />
-4 step<br />
-log 적용<br />
-5 step<br />
-DCT 실행<br />
-6 step<br />
+<p>1 step<br>
+시그널을 일정 frame 단위로 나눔.<br>
+windowing 실행<br>
+2 step<br>
+해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함.<br>
+3 step<br>
+mel filter bank 적용<br>
+4 step<br>
+log 적용<br>
+5 step<br>
+DCT 실행<br>
+6 step<br>
 liftering 실행  </p>
-<hr />
-<p>reference<br />
-https://en.wikipedia.org/wiki/Mel-frequency_cepstrum<br />
+<hr>
+<p>reference<br>
+https://en.wikipedia.org/wiki/Mel-frequency_cepstrum<br>
 http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-frequency-cepstral-coefficients-mfccs/  </p>
             </div>
             <!-- /.entry-content -->
@@ -135,16 +132,12 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -167,6 +160,7 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
