--- a/mle.html
+++ b/mle.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="math" />
-        <meta name="description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 ..." />
+        <meta name="description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width" />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;MLE&#34;"/>
         <meta property="og:url" content="/mle.html"/>
-        <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 ..."/>
+        <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-18" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="math" />
@@ -59,9 +59,6 @@ Log            </a>
                         </li>
                         <li >
                             <a href="/category/posts.html">Posts</a>
-                        </li>
-                        <li >
-                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -105,26 +102,26 @@ Log            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <h1>최우도 추정</h1>
-<p>Maximum likelihood estimation<br />
+<p>Maximum likelihood estimation<br>
 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나.  </p>
 <div class="math">$$D = {x_1, x_2,\cdots,x_N}$$</div>
 <p>
 일 때, 
-데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 <span class="math">\(\mu\)</span> 와 <span class="math">\(\sigma^2\)</span> 를 구한다면,<br />
-우도  <span class="math">\(L(D, \mu, \sigma)\)</span><br />
+데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 <span class="math">\(\mu\)</span> 와 <span class="math">\(\sigma^2\)</span> 를 구한다면,<br>
+우도  <span class="math">\(L(D, \mu, \sigma)\)</span><br>
 여기에 로그를 취하면, <span class="math">\(\mathcal{L}(D, \mu, \sigma)\)</span>  </p>
-<p>최우도 추정은 우도를 편미분하여 최대값을 구한다.<br />
+<p>최우도 추정은 우도를 편미분하여 최대값을 구한다.<br>
 </p>
 <div class="math">$$ \hat\mu = \Sigma_i x^i/N \Leftrightarrow \partial L(D, \mu, \sigma)$$</div>
-<p><br />
+<p><br>
 </p>
 <div class="math">$$ \hat\sigma^2 = \Sigma_i (x_i - \hat\mu)^2 / N \Leftrightarrow \partial \mathcal{L}(D, \mu, \sigma) $$</div>
 <script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
-    var align = "center",
-        indent = "0em",
+    var align = "left",
+        indent = "2em",
         linebreak = "false";
 
-    if (false) {
+    if (true) {
         align = (screen.width < 768) ? "left" : align;
         indent = (screen.width < 768) ? "0em" : indent;
         linebreak = (screen.width < 768) ? 'true' : linebreak;
@@ -139,7 +136,7 @@ Log            </a>
     mathjaxscript[(window.opera ? "innerHTML" : "text")] =
         "MathJax.Hub.Config({" +
         "    config: ['MMLorHTML.js']," +
-        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
+        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' }, Macros: {} }," +
         "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
         "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
         "    displayAlign: '"+ align +"'," +
@@ -184,16 +181,12 @@ Log            </a>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
-
+<!-- Sidebar -->
 <section class="well well-sm">
-    <ul class="list-group list-group-flush">
-
-
-
-
-
-    </ul>
-</section>            </aside>
+  <ul class="list-group list-group-flush">
+  </ul>
+</section>
+<!-- End Sidebar -->            </aside>
         </div>
     </div>
 </div>
@@ -216,6 +209,7 @@ Log            </a>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
+
 
 
 </body>
