--- a/bst-node-count.html
+++ b/bst-node-count.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"BST node count" - Log</title>
+    <title>BST node count - Log</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;BST node count&#34;"/>
+        <meta property="og:title" content="BST node count"/>
         <meta property="og:url" content="/bst-node-count.html"/>
         <meta property="og:description" content="BST 에서 node 갯수 세기 left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기 입력 node 보다 작은 숫자 구하기 start root 만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동 만약 입력 데이터보다 …"/>
         <meta property="article:published_time" content="2016-10-02" />
@@ -78,8 +78,8 @@ Log            </a>
                 <h1>
                     <a href="/bst-node-count.html"
                        rel="bookmark"
-                       title="Permalink to "BST node count"">
-                        "BST node count"
+                       title="Permalink to BST node count">
+                        BST node count
                     </a>
                 </h1>
             </header>
