--- a/keyboard-shortcuts-for-bash.html
+++ b/keyboard-shortcuts-for-bash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"Keyboard Shortcuts for Bash" - Log</title>
+    <title>Keyboard Shortcuts for Bash - Log</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;Keyboard Shortcuts for Bash&#34;"/>
+        <meta property="og:title" content="Keyboard Shortcuts for Bash"/>
         <meta property="og:url" content="/keyboard-shortcuts-for-bash.html"/>
         <meta property="og:description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command …"/>
         <meta property="article:published_time" content="2016-10-02" />
@@ -78,8 +78,8 @@ Log            </a>
                 <h1>
                     <a href="/keyboard-shortcuts-for-bash.html"
                        rel="bookmark"
-                       title="Permalink to "Keyboard Shortcuts for Bash"">
-                        "Keyboard Shortcuts for Bash"
+                       title="Permalink to Keyboard Shortcuts for Bash">
+                        Keyboard Shortcuts for Bash
                     </a>
                 </h1>
             </header>
