--- a/hwagryul.html
+++ b/hwagryul.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"확률" - Log</title>
+    <title>확률 - Log</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;확률&#34;"/>
+        <meta property="og:title" content="확률"/>
         <meta property="og:url" content="/hwagryul.html"/>
         <meta property="og:description" content="확률분포 Random Variable(확률변수) 정의 $$ X:\Omega\Rightarrow R $$ X: 함수 이산확률변수 \(P(X=k)= P(\{w:X(w)=k\})\) Joint probability(결합확률) 확률질량함수 이산데이터에 대하여 누적 확률 누적분포함수 (CDF) 확률값을 적분한 것. 1에 수렴 확률밀도함수 누적분포를 미분한 것 Maginary probability(주변확률) 두 변수중 한가지 확률변수 계산 왜 maginary 인가 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-17" />
@@ -78,8 +78,8 @@ Log            </a>
                 <h1>
                     <a href="/hwagryul.html"
                        rel="bookmark"
-                       title="Permalink to "확률"">
-                        "확률"
+                       title="Permalink to 확률">
+                        확률
                     </a>
                 </h1>
             </header>
