--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@ Log            </a>
     <div class="row">
         <div class="col-sm-9">
             <article>
+                <h2><a href="/end-to-end-speech-recognition-jagseongjung.html">End-to-End Speech Recognition - 작성중</a></h2>
+                <div class="summary"><p>해당 글은 "Towards End-to-End Speech Recognition with Recurrent Neural Networks" 를 기반하여 공부한 내용을 작성하였다. </p>
+<p>기존에 Neural Network을 적용한 음성 인식 모델은 여러 단계 중 하나의 단계, 즉 classify 를 위하여 NN 을 사용하였다. </p>
+<p>기존 모델의 동작 파이프라인을 개략적으로 나타내면 아래와 같다. </p>
+<ol>
+<li>Feature extraction : MFCC 와 같은 단계를 의미한다. </li>
+<li>Speaker …</li></ol>
+                    <a class="btn btn-default btn-xs" href="/end-to-end-speech-recognition-jagseongjung.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="/hmm-introduction.html">HMM Introduction</a></h2>
                 <div class="summary"><p>Hidden Markov Model(HMM)이란 Markov Model 중 state 변화에 대하여 관찰자는 알지 못하고, 단지 결과만을 관측할 수 있는 Model 을 의미한다. 즉, state 변화가 hidden 되어 있다는 의미이다.</p>
                     <a class="btn btn-default btn-xs" href="/hmm-introduction.html">more ...</a>
@@ -74,7 +86,7 @@ Log            </a>
             </article>
             <hr/>
             <article>
-                <h2><a href="/bst-node-count.html">"BST node count"</a></h2>
+                <h2><a href="/bst-node-count.html">BST node count</a></h2>
                 <div class="summary"><h1>BST 에서 node 갯수 세기</h1>
 <p>left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기  </p>
 <h2>입력 node 보다 작은 숫자 구하기</h2>
@@ -87,7 +99,7 @@ Log            </a>
             </article>
             <hr/>
             <article>
-                <h2><a href="/keyboard-shortcuts-for-bash.html">"Keyboard Shortcuts for Bash"</a></h2>
+                <h2><a href="/keyboard-shortcuts-for-bash.html">Keyboard Shortcuts for Bash</a></h2>
                 <div class="summary"><h1>Bash shell 단축키</h1>
 <p>http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함  </p>
 <p>Ctrl + A    Go to the beginning of the line you are currently typing on<br>
@@ -98,7 +110,7 @@ Ctrl + L                Clears the Screen, similar to the clear command …</p>
             </article>
             <hr/>
             <article>
-                <h2><a href="/linear-regression.html">"Linear Regression"</a></h2>
+                <h2><a href="/linear-regression.html">Linear Regression</a></h2>
                 <div class="summary"><h1>다항식 회귀</h1>
 <div class="math">$$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$</div>
 <p><br>
@@ -168,7 +180,7 @@ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변
             </article>
             <hr/>
             <article>
-                <h2><a href="/mle.html">"MLE"</a></h2>
+                <h2><a href="/mle.html">MLE</a></h2>
                 <div class="summary"><h1>최우도 추정</h1>
 <p>Maximum likelihood estimation<br>
 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나.  </p>
@@ -240,7 +252,7 @@ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변
             </article>
             <hr/>
             <article>
-                <h2><a href="/hwagryul.html">"확률"</a></h2>
+                <h2><a href="/hwagryul.html">확률</a></h2>
                 <div class="summary"><h1>확률분포</h1>
 <h2>Random Variable(확률변수)</h2>
 <p>정의  </p>
@@ -322,7 +334,7 @@ X: 함수</p>
             </article>
             <hr/>
             <article>
-                <h2><a href="/mfcc.html">"MFCC"</a></h2>
+                <h2><a href="/mfcc.html">MFCC</a></h2>
                 <div class="summary"><p>음성 데이터의 특징 추출<br>
 성대의 떨림은 고유함.성도를 system H 라고 가정하여<br>
 이 시스템 H의 특징을 찾음.  </p>
