--- a/linear-regression.html
+++ b/linear-regression.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"Linear Regression" - Log</title>
+    <title>Linear Regression - Log</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;Linear Regression&#34;"/>
+        <meta property="og:title" content="Linear Regression"/>
         <meta property="og:url" content="/linear-regression.html"/>
         <meta property="og:description" content="다항식 회귀 $$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변의 선형 회귀라고 여기고 푼다. Model Selection 정확도를 어떻게 측정. 최대로 잘 맞는지 overfitting 모델에 비해 data 가 너무 적어 noise 까지 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-10-01" />
@@ -79,8 +79,8 @@ Log            </a>
                 <h1>
                     <a href="/linear-regression.html"
                        rel="bookmark"
-                       title="Permalink to "Linear Regression"">
-                        "Linear Regression"
+                       title="Permalink to Linear Regression">
+                        Linear Regression
                     </a>
                 </h1>
             </header>
