--- a/mle.html
+++ b/mle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"MLE" - Log</title>
+    <title>MLE - Log</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="&#34;MLE&#34;"/>
+        <meta property="og:title" content="MLE"/>
         <meta property="og:url" content="/mle.html"/>
         <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 …if (!document.getElementById(&#39;mathjaxscript_pelican_#%@#$@#&#39;)) { var align = &#34;left&#34;, indent = &#34;2em&#34;, linebreak = &#34;false&#34;; if (true) { align = (screen.width"/>
         <meta property="article:published_time" content="2016-09-18" />
@@ -78,8 +78,8 @@ Log            </a>
                 <h1>
                     <a href="/mle.html"
                        rel="bookmark"
-                       title="Permalink to "MLE"">
-                        "MLE"
+                       title="Permalink to MLE">
+                        MLE
                     </a>
                 </h1>
             </header>
